- Bugfix: Instead of doing nothing, PropertyPreferences now load their default value if they cannot read any other value
- Bugfix: When deploying a CGrid some Dockables did not appear: the tree of the SplitDockStation was cleaned up too early before all Dockables had been inserted, leading to a corrupted tree
- Bugfix: SplitDockStation did assign leaf-id to node when using drop(SplitDockPathProperty). As a result unmaximizing a stack of CDockables could destroy the stack.
- Bugfix: SplitDockStation does now always update the boundaries of its tree before dropping a dockable. Wrong boundaries did lead to Dockables dropped at the wrong location even if the used DockableProperty was correct.
- Bugfix: Path now encodes its content when using "toString" and decodes contents on creation. Meaning inside a Path object the items are never encoded.
- Bugfix: MouseFocusObserver no longer calls "component.requestFocusInWindow" if the component does not belong to a Dockable
- Bugfix: SplitDockStation is now much more strict when it comes to enforcing the uniqueness of placeholders
- Bugfix: If a CStation was registered at a CControl and later the same object was registered as a SingleCDockable, then CControl did not assign a unique identifier to that Station/Dockable.
- Bugfix: SimpleDockAction.KeyForwarder caused a memory leak by not removing its listeners properly
- Bugfix: CLocations returning null as root but have an ExtendedMode are (again) supported.
- Bugfix: When moving/dragging a Dockable from a SplitDockStation with size-locked Dockables, the locked Dockables got resized even if it was not necessary.
- API: FlapDockStation supports factory for creating the window
- Bugfix: DockUI now stalls all events rather than setting the SingleParentRemover to null when updating the DockTheme of a station
- Bugfix: CLayoutChangeStrategy.replaceMultipleDockables could throw a NPE
- Bugfix: CDockable.getBaseLocation did return null when a location was actually available